# osed-scripts

./: LICENSE  README.md  attach-process.ps1  egghunter.py  exploit-template.py  find-bad-chars.py  find-gadgets.py  find-ppr.py  find-ppr_ns.py  install-mona.ps1  install-mona.sh  pyproject.toml  search.py  shellcoder.py  string-to-shellcode.py  utils.py
