[tool.poetry]
name = "osed-scripts"
version = "0.1.0"
description = ""
authors = ["Ben \"epi\" Risher <epibar052@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^10.1.0"
ropper = "^1.13.6"
keystone-engine = "^0.9.2"
capstone = "^4.0.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
black = "^21.4b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
